# olympus

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile.dev  pyproject.toml
backend/src/api/: __main__.py  config.py
backend/src/api/crud/: __init__.py  users.py
backend/src/api/database/: __init__.py  postgres.py
backend/src/api/endpoints/: __init__.py  items.py  users.py
backend/src/api/models/: __init__.py  ingredients.py  item.py  user.py
backend/src/api/schemas/: __init__.py  ingredients.py  recipes.py  user.py
backend/src/api/utils/: __init__.py  id.py
backend/startup/: docker.bash
backend/test/: populate.py  user.http
frontend/: Dockerfile.dev  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  page_old.tsx
frontend/app/ingredients/: page.tsx
frontend/app/playground/: page.tsx
frontend/app/playground/graph/: page.tsx
frontend/app/recipes/: page.tsx
frontend/components/forms/user/: NewUser.tsx
frontend/components/layout/: SideMenu.tsx  SideProfile.tsx
frontend/components/primitives/: Button.tsx  TextInput.tsx
frontend/components/users/: UserRow.tsx  UsersList.tsx
frontend/lib/actions/: user.ts
frontend/lib/types/: user.ts
